--- a/Proyecto_Sistemas_Programables/Proyecto_Sistemas_Programables.csproj
+++ b/Proyecto_Sistemas_Programables/Proyecto_Sistemas_Programables.csproj
@@ -84,5 +84,41 @@
   <ItemGroup>
     <None Include="Resources\ventilador6-3870285687.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ventana cerrada.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ventana abierta.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hogar-sostenible.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foco blanco encendido.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foco blanco apagado.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foco amarillo encendido.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foco amarillo apagado.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
