--- a/Proyecto_Sistemas_Programables/Proyecto_Sistemas_Programables.csproj
+++ b/Proyecto_Sistemas_Programables/Proyecto_Sistemas_Programables.csproj
@@ -125,5 +125,8 @@
   <ItemGroup>
     <None Include="Resources\foco amarillo apagado.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\image-removebg-preview.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
